fix: sidebar element padding on mobile size

--- a/packages/theme/src/sidebar.scss
+++ b/packages/theme/src/sidebar.scss
@@ -128,11 +128,12 @@
   }
 
   &__menu-button {
-    @apply p-0 w-full;
+    @apply w-full;
   }
 
   &__collapsed-button {
     @apply flex items-center justify-start py-4 sm:py-2;
+    height: unset;
   }
 
   &__menu-content {
